[project]
name = "pypolestar"
description = "Polestar API client for Python"
version = "0.0.1"
authors = [
    { name = "Tuen Lee", email = "noreply@dont.know" }
]
dependencies = [
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]